created a link in the index.html file to test.html

--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,7 @@
 		<li><a href="crud.html">CRUD</a></li>
 		<li><a href="sobre.html">SOBRE</a></li>
 		<li><a href="agenda.html">AGENDA</a></li>
+		<li><a href="teste.html">COMMIT</a></li>
 	</ul>
 	<h1>Jefferson Legnaghi</h1>
     <h2>Olá tudo bem? bem vindo ao meu site!</h2>
