--- a/web/teste.html
+++ b/web/teste.html
@@ -7,11 +7,6 @@
     <title>Dteste</title>
 </head>
 <body>
-    <h1>Terceiro Commit</h1>
-    <p>Este e um teste com o commit do github</p>
-    <h1>Quarto Commit</h1>
-    <p>Este e um teste de commit no trabalho</p>
-    <h1>#XXX Commit</h1>
-    <p>Este e um teste de commit no trabalho</p>
+    <h1>Pagina de teste sobre commit !</h1>
 </body>
 </html>
