--- a/web/sobre.html
+++ b/web/sobre.html
@@ -14,10 +14,9 @@
 <body>
     <ul>
 		<li><a href="index.html">HOME</a></li>
-		<li><a href="mysql.html">MYSQL</a></li>
 		<li><a href="crud.html">CRUD</a></li>
+		<li><a href="formulario.html">FORMULARIO</a></li>
 		<li><a href="sobre.html">SOBRE</a></li>
-		<li><a href="agenda.html">AGENDA</a></li>
 	  </ul>
     <h1>Olá sou o Jefferson</h1>
     <p>Me chamo Jefferson Legnaghi, tenho 30 anos</p>
